[package]
name = "knitlang_v2"
version = "0.0.1"
authors = ["Penny Haley"]
edition = "2021"
description = "A tiny, playful programming language inspired by knitting terms"
license = "MIT"
repository = "https://github.com/penne-not-pasta/knitlang_v2"
readme = "README.md"
keywords = ["knitting", "language", "interpreter"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

